rs/src/parser.rs
use std::collections::VecDeque;
use std::convert::AsRef;
use std::error::Error;
use std::fs::File;
use std::io;
use std::io::{Chars, Read};
use std::path::Path;

use token::{Token, TokenType};
use tree::Tree;


pub type AST = Tree<Token>;

pub struct Parser {
    charstream:    Chars<File>,
    eof:           bool,
    charhistory:   VecDeque<char>,
    ch:            char,
    currentindent: String,
}


impl Parser {
    pub fn new<P: AsRef<Path>>(filename: P) -> io::Result<Self> {
        let file = File::open(filename)?;

        Ok(Parser {
            charstream:    file.chars(),
            eof:           false,
            charhistory:   VecDeque::with_capacity(20),
            ch:            ' ', // Dummy value.
            currentindent: String::with_capacity(32),
        })
    }

    pub fn parse(&mut self) -> Result<Option<AST>, String> {
        let mut last_ch = '\0'; // Dummy value.
        let mut hit_eof = true;

        while let Some(temp_ch) = self.charstream.next() {
            self.ch = match temp_ch {
                Ok(c)  => c,
                Err(e) => return Err(e.description().to_string()),
            };

            if !self.ch.is_whitespace() {
                hit_eof = false;

                break;
            }

            last_ch = self.ch;
        }

        if hit_eof {
            self.eof = true;
        }

        if last_ch != '\0' && !is_newline(last_ch) {
            return Err(
                "source must not start with leading whitespace".to_string()
            );
        }

        let mut main_ast = new_ast_node(TokenType::Root, 1);
        let prog = if let Some(p) = self.parse_prog()? {
            p
        } else {
            return Ok(None);
        };

        main_ast.add_child(prog);

        Ok(Some(main_ast))
    }

    fn parse_prog(&mut self) -> Result<Option<AST>, String> {
        let mut prog = new_ast_node(TokenType::Prog, 24);

        if let Some(mod_decl) = self.parse_mod_decl()? {
            prog.add_child(mod_decl);
        } else {
            return Ok(None);
        }

        while !self.eof || !self.charhistory.is_empty() {
            if let Some(import) = self.parse_import()? {
                prog.add_child(import);
            } else {
                break;
            }
        }

        while !self.eof || !self.charhistory.is_empty() {
            if let Some(line) = self.parse_line(true)? {
                prog.add_child(line);
            } else {
                break;
            }
        }

        Ok(Some(prog))
    }

    fn parse_mod_decl(&mut self) -> Result<Option<AST>, String> {
        let mut mod_decl = new_ast_node(TokenType::ModDecl, 8);

        if let Some(mod_kwd) = self.parse_module_keyword()? {
            mod_decl.add_child(mod_kwd);
        } else {
            return Ok(None);
        }

        if let Some(mod_name) = self.parse_ident()? {
            mod_decl.add_child(mod_name);
        } else {
            return Err(
                "expected name of module to be plain identifier".to_string()
            );
        }

        self.consume_blanks()?;

        let mut expose_or_hide = true;
        if let Some(exposing_kwd) = self.parse_exposing_keyword()? {
            mod_decl.add_child(exposing_kwd);
        } else {
            if let Some(hiding_kwd) = self.parse_hiding_keyword()? {
                mod_decl.add_child(hiding_kwd);
            } else {
                expose_or_hide = false;
            }
        }

        if expose_or_hide {
            if let Some(first_ident) = self.parse_ident()? {
                mod_decl.add_child(first_ident);
            } else {
                return Err(
                    "expected at least one item in module export/hide list"
                        .to_string()
                );
            }

            self.consume_blanks()?;

            while let Some(comma) = self.parse_comma()? {
                if let Some(ident) = self.parse_ident()? {
                    mod_decl.add_child(comma);
                    mod_decl.add_child(ident);

                    self.consume_blanks()?;
                } else {
                    break;
                }
            }
        }

        if !self.expect_newline()? {
            Err("expected newline after module declaration".to_string())
        } else {
            Ok(Some(mod_decl))
        }
    }

    fn parse_import(&mut self) -> Result<Option<AST>, String> {
        let mut import = new_ast_node(TokenType::Import, 10);

        if let Some(import_kwd) = self.parse_import_keyword()? {
            import.add_child(import_kwd);
        } else {
            return Ok(None);
        }

        if let Some(mod_name) = self.parse_ident()? {
            import.add_child(mod_name);
        } else {
            return Err(
                "expected module name after import keyword".to_string()
            );
        }

        self.consume_blanks()?;

        if let Some(as_kwd) = self.parse_as_keyword()? {
            import.add_child(as_kwd);

            if let Some(qual_name) = self.parse_ident()? {
                import.add_child(qual_name);
            } else {
                return Err(
                    "expected namespace alias after as keyword".to_string()
                );
            }
        } else {
            if let Some(hiding_kwd) = self.parse_hiding_keyword()? {
                import.add_child(hiding_kwd);
            }

            self.consume_blanks()?;

            if let Some(l_paren) = self.parse_l_paren()? {
                import.add_child(l_paren);
            } else {
                return Err(
                    "expected left paren to start import list".to_string()
                );
            }

            if let Some(first_import_item) = self.parse_ident()? {
                import.add_child(first_import_item);
            } else {
                return Err(
                    "expected at least one import item in import list"
                        .to_string()
                );
            }

            self.consume_blanks()?;

            while let Some(comma) = self.parse_comma()? {
                if let Some(import_item) = self.parse_ident()? {
                    import.add_child(comma);
                    import.add_child(import_item);

                    self.consume_blanks()?;
                } else {
                    break;
                }
            }

            self.consume_blanks()?;

            if let Some(r_paren) = self.parse_r_paren()? {
                import.add_child(r_paren);
            } else {
                return Err(
                    "expected right paren to terminate import list".to_string()
                );
            }
        }

        if !self.expect_newline()? {
            Err("expected newline after import statement".to_string())
        } else {
            Ok(Some(import))
        }
    }

    fn parse_line(
        &mut self,
        consume_newline: bool
    ) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let mut line = new_ast_node(TokenType::Line, 1);

        if let Some(expr) = self.parse_expr()? {
            line.add_child(expr);
        }

        self.consume_line_comment(consume_newline)?;

        if consume_newline {
            self.expect_newline()?;
        }

        Ok(Some(line))
    }

    fn consume_line_comment(
        &mut self,
        consume_newline: bool
    ) -> Result<bool, String> {
        self.consume_blanks()?;

        if !self.consume_line_comment_op()? {
            return Ok(false);
        }

        if is_newline(self.ch) {
            if consume_newline {
                self.expect_newline()?;
            }

            return Ok(true);
        }

        while let Some(&front_ch) = self.charhistory.front() {
            self.ch = front_ch;
            self.charhistory.pop_front();

            if is_newline(self.ch) {
                if consume_newline {
                    self.expect_newline()?;
                }

                return Ok(true);
            }
        }

        while let Some(temp_ch) = self.charstream.next() {
            self.ch = match temp_ch {
                Ok(c)  => c,
                Err(e) => return Err(e.description().to_string()),
            };

            if is_newline(self.ch) {
                if consume_newline {
                    self.expect_newline()?;
                }

                return Ok(true);
            }
        }

        self.eof = true;

        Ok(true)
    }

    fn parse_expr(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let first_subexpr = if let Some(subexpr) = self.parse_subexpr()? {
            subexpr
        } else {
            return Ok(None);
        };

        let mut expr = new_ast_node(TokenType::Expr, 6);
        expr.add_child(first_subexpr);

        while let Some(subexpr) = self.parse_subexpr()? {
            expr.add_child(subexpr);
        }

        Ok(Some(expr))
    }

    fn parse_subexpr(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let mut subexpr = new_ast_node(TokenType::Subexpr, 1);

        if let Some(var) = self.parse_var()? {
            subexpr.add_child(var);
        } else if let Some(assign) = self.parse_assign()? {
            subexpr.add_child(assign);
        } else if let Some(fn_decl) = self.parse_fn_decl()? {
            subexpr.add_child(fn_decl);
        } else if let Some(parened) = self.parse_parened()? {
            subexpr.add_child(parened);
        } else if let Some(return_) = self.parse_return()? {
            subexpr.add_child(return_);
        } else if let Some(case) = self.parse_case()? {
            subexpr.add_child(case);
        } else if let Some(if_else) = self.parse_if_else()? {
            subexpr.add_child(if_else);
        } else if let Some(try) = self.parse_try()? {
            subexpr.add_child(try);
        } else if let Some(while_) = self.parse_while()? {
            subexpr.add_child(while_);
        } else if let Some(for_) = self.parse_for()? {
            subexpr.add_child(for_);
        } else if let Some(lambda) = self.parse_lambda()? {
            subexpr.add_child(lambda);
        } else if let Some(tuple_lit) = self.parse_tuple_lit()? {
            subexpr.add_child(tuple_lit);
        } else if let Some(list_lit) = self.parse_list_lit()? {
            subexpr.add_child(list_lit);
        } else if let Some(list_comp) = self.parse_list_comp()? {
            subexpr.add_child(list_comp);
        } else if let Some(dict_lit) = self.parse_dict_lit()? {
            subexpr.add_child(dict_lit);
        } else if let Some(dict_comp) = self.parse_dict_comp()? {
            subexpr.add_child(dict_comp);
        } else if let Some(set_lit) = self.parse_set_lit()? {
            subexpr.add_child(set_lit);
        } else if let Some(set_comp) = self.parse_set_comp()? {
            subexpr.add_child(set_comp);
        } else if let Some(qual_ident) = self.parse_qual_ident()? {
            subexpr.add_child(qual_ident);
        } else if let Some(infixed) = self.parse_infixed()? {
            subexpr.add_child(infixed);
        } else if let Some(num_lit) = self.parse_num_lit()? {
            subexpr.add_child(num_lit);
        } else if let Some(chr_lit) = self.parse_chr_lit()? {
            subexpr.add_child(chr_lit);
        } else if let Some(str_lit) = self.parse_str_lit()? {
            subexpr.add_child(str_lit);
        } else if let Some(op) = self.parse_op()? {
            subexpr.add_child(op);
        } else {
            return Ok(None);
        }

        Ok(Some(subexpr))
    }

    fn parse_var(&mut self) -> Result<Option<AST>, String> {
        let var_keyword = if let Some(var_kwd) = self.parse_var_keyword()? {
            var_kwd
        } else {
            return Ok(None);
        };

        let pattern = if let Some(pat) = self.parse_pattern()? {
            pat
        } else {
            return Err(
                "left-hand side of var assignment must be a pattern"
                    .to_string()
            );
        };

        self.consume_blanks()?;

        let mut var = new_ast_node(TokenType::Var, 6);
        var.add_child(var_keyword);
        var.add_child(pattern);

        if let Some(colon) = self.parse_colon()? {
            if let Some(type_) = self.parse_type_ident()? {
                var.add_child(colon);
                var.add_child(type_);
            } else {
                return Err(
                    "type of var binding must be a valid type identifier"
                        .to_string()
                );
            }
        }

        let equals = if let Some(eq) = self.parse_equals()? {
            eq
        } else {
            return Err("var assignment must use =".to_string());
        };

        let expr = if let Some(xpr) = self.parse_expr()? {
            xpr
        } else {
            return Err(
                "right-hand side of var assignment must be a valid expression"
                    .to_string()
            );
        };

        var.add_child(equals);
        var.add_child(expr);

        Ok(Some(var))
    }

    fn parse_assign(&mut self) -> Result<Option<AST>, String> {
        let pattern = if let Some(pat) = self.parse_pattern()? {
            pat
        } else {
            return Ok(None);
        };

        self.consume_blanks()?;

        let mut assign = new_ast_node(TokenType::Assign, 5);
        assign.add_child(pattern.clone());

        if let Some(colon) = self.parse_colon()? {
            let type_ = if let Some(ty) = self.parse_type_ident()? {
                ty
            } else {
                return Err(
                    "type of binding must be a valid identifier".to_string()
                );
            };

            assign.add_child(colon);
            assign.add_child(type_);
        }

        self.consume_blanks()?;

        let equals = if let Some(eq) = self.parse_equals()? {
            eq
        } else {
            self.charhistory.push_front(self.ch);
            self.charhistory.push_front(' ');

            let mut consumed_pattern = str_repr(&pattern);

            while consumed_pattern.len() > 1 {
                if let Some(consumed_ch) = consumed_pattern.pop() {
                    self.charhistory.push_front(consumed_ch);
                }
            }

            if let Some(c) = consumed_pattern.pop() {
                self.ch = c;
            }

            return Ok(None);
        };

        let expr = if let Some(xpr) = self.parse_expr()? {
            xpr
        } else {
            return Err(
                "right-hand side of assignment must be a valid expression"
                    .to_string()
            );
        };

        assign.add_child(equals);
        assign.add_child(expr);

        Ok(Some(assign))
    }

    fn parse_fn_decl(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let fn_keyword = if let Some(fn_kwd) = self.parse_fn_keyword()? {
            fn_kwd
        } else {
            return Ok(None);
        };

        self.consume_blanks()?;

        let fn_name = if let Some(f_name) = self.parse_ident()? {
            f_name
        } else {
            return Err("expected function name".to_string());
        };

        self.consume_blanks()?;

        let mut fn_decl = new_ast_node(TokenType::FnDecl, 18);
        fn_decl.add_child(fn_keyword);
        fn_decl.add_child(fn_name);

        while let Some(fn_param) = self.parse_param()? {
            fn_decl.add_child(fn_param);
        }

        self.consume_blanks()?;

        if let Some(r_arrow) = self.parse_r_arrow()? {
            fn_decl.add_child(r_arrow);

            let ret_type = if let Some(ret_ty) = self.parse_qual_ident()? {
                ret_ty
            } else {
                return Err("expected type after arrow".to_string());
            };

            fn_decl.add_child(ret_type);
        }

        self.get_block(&mut fn_decl, TokenType::Line)?;

        Ok(Some(fn_decl))
    }

    fn parse_parened(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let l_paren = if let Some(l_prn) = self.parse_l_paren()? {
            l_prn
        } else {
            return Ok(None);
        };

        let expr = if let Some(xpr) = self.parse_expr()? {
            xpr
        } else {
            return Err("expected expression within parens".to_string());
        };

        let r_paren = if let Some(r_prn) = self.parse_r_paren()? {
            r_prn
        } else {
            return Err("expected closing paren".to_string());
        };

        let mut parened = new_ast_node(TokenType::Parened, 3);
        parened.add_child(l_paren);
        parened.add_child(expr);
        parened.add_child(r_paren);

        Ok(Some(parened))
    }

    fn parse_return(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let return_keyword =
            if let Some(ret_kwd) = self.parse_return_keyword()? {
                ret_kwd
            } else {
                return Ok(None);
            };

        let expr = if let Some(xpr) = self.parse_expr()? {
            xpr
        } else {
            return Err("expected expression to return".to_string());
        };

        let mut return_ = new_ast_node(TokenType::Return, 2);
        return_.add_child(return_keyword);
        return_.add_child(expr);

        Ok(Some(return_))
    }

    fn parse_case(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let case_keyword = if let Some(case_kwd) = self.parse_case_keyword()? {
            case_kwd
        } else {
            return Ok(None);
        };

        self.consume_blanks()?;

        let subject_expr = if let Some(subj_expr) = self.parse_expr()? {
            subj_expr
        } else {
            return Err("expected subject expression for case".to_string());
        };

        let mut case = new_ast_node(TokenType::Case, 6);
        case.add_child(case_keyword);
        case.add_child(subject_expr);

        self.get_block(&mut case, TokenType::CaseBranch)?;

        Ok(Some(case))
    }

    fn parse_case_branch(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let pattern = if let Some(pat) = self.parse_pattern()? {
            pat
        } else {
            return Ok(None);
        };

        let fat_r_arrow = if let Some(fat_r_arr) = self.parse_fat_r_arrow()? {
            fat_r_arr
        } else {
            return Err("expected => while parsing case branch".to_string());
        };

        let line = if let Some(l) = self.parse_line(false)? {
            l
        } else {
            return Err("expected expression(s) after =>".to_string());
        };

        let mut case_branch = new_ast_node(TokenType::CaseBranch, 3);
        case_branch.add_child(pattern);
        case_branch.add_child(fat_r_arrow);
        case_branch.add_child(line);

        Ok(Some(case_branch))
    }

    fn parse_if_else(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let if_keyword = if let Some(if_kwd) = self.parse_if_keyword()? {
            if_kwd
        } else {
            return Ok(None);
        };

        self.consume_blanks()?;

        let if_condition = if let Some(if_cond) = self.parse_expr()? {
            if_cond
        } else {
            return Err("expected expression as if condition".to_string());
        };

        let mut if_else = new_ast_node(TokenType::IfElse, 9);
        if_else.add_child(if_keyword);
        if_else.add_child(if_condition);

        let start_indent = self.get_block(&mut if_else, TokenType::Line)?;

        if self.currentindent != start_indent {
            return Ok(Some(if_else));
        }

        if let Some(else_kwd) = self.parse_else_keyword()? {
            if_else.add_child(else_kwd);
        } else {
            return Ok(Some(if_else));
        };

        if let Some(if_else_recur) = self.parse_if_else()? {
            if_else.add_child(if_else_recur);

            return Ok(Some(if_else));
        }

        self.get_block(&mut if_else, TokenType::Line)?;

        Ok(Some(if_else))
    }

    fn parse_try(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let mut try = new_ast_node(TokenType::Try, 8);

        if let Some(try_kwd) = self.parse_try_keyword()? {
            self.consume_blanks()?;

            try.add_child(try_kwd);
        } else {
            return Ok(None);
        }

        let start_indent = self.get_block(&mut try, TokenType::Line)?;

        if self.currentindent != start_indent {
            return Err(
                "try must have corresponsing catch on same indent level"
                    .to_string()
            );
        }

        let catch_keyword =
            if let Some(catch_kwd) = self.parse_catch_keyword()? {
                catch_kwd
            } else {
                return Err("try must have corresponding catch".to_string());
            };

        if let Some(exception_ident) = self.parse_ident()? {
            try.add_child(catch_keyword);
            try.add_child(exception_ident);

            self.get_block(&mut try, TokenType::Line)?;

            Ok(Some(try))
        } else {
            Err("catch must name the caught exception".to_string())
        }
    }

    fn parse_while(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let while_keyword =
            if let Some(while_kwd) = self.parse_while_keyword()? {
                while_kwd
            } else {
                return Ok(None);
            };

        self.consume_blanks()?;

        if let Some(while_condition) = self.parse_expr()? {
            let mut while_ = new_ast_node(TokenType::While, 8);
            while_.add_child(while_keyword);
            while_.add_child(while_condition);

            self.get_block(&mut while_, TokenType::Line)?;

            Ok(Some(while_))
        } else {
            Err("expected expression as while condition".to_string())
        }
    }

    fn parse_for(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let for_keyword = if let Some(for_kwd) = self.parse_for_keyword()? {
            for_kwd
        } else {
            return Ok(None);
        };

        self.consume_blanks()?;

        let for_pattern = if let Some(for_pat) = self.parse_pattern()? {
            for_pat
        } else {
            return Err(
                "expected pattern as first part of for header".to_string()
            );
        };

        self.consume_blanks()?;

        let in_keyword = if let Some(in_kwd) = self.parse_in_keyword()? {
            in_kwd
        } else {
            return Err("missing in keyword of for loop".to_string());
        };

        let iterated = if let Some(itrd) = self.parse_expr()? {
            itrd
        } else {
            return Err("for must iterate over an expression".to_string());
        };

        let mut for_ = new_ast_node(TokenType::For, 9);
        for_.add_child(for_keyword);
        for_.add_child(for_pattern);
        for_.add_child(in_keyword);
        for_.add_child(iterated);

        self.get_block(&mut for_, TokenType::Line)?;

        Ok(Some(for_))
    }

    fn parse_lambda(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let backslash = if let Some(bkslsh) = self.parse_backslash()? {
            bkslsh
        } else {
            return Ok(None);
        };

        let first_param = if let Some(fst_param) = self.parse_param()? {
            fst_param
        } else {
            return Err("lambda expression requires 1+ args".to_string());
        };

        let mut lambda = new_ast_node(TokenType::Lambda, 8);
        lambda.add_child(backslash);
        lambda.add_child(first_param);

        self.consume_blanks()?;

        while let Some(comma) = self.parse_comma()? {
            if let Some(param) = self.parse_param()? {
                lambda.add_child(comma);
                lambda.add_child(param);

                self.consume_blanks()?;
            } else {
                break;
            }
        }

        let r_arrow = if let Some(r_arr) = self.parse_r_arrow()? {
            r_arr
        } else {
            return Err("lambda expression requires ->".to_string());
        };

        if let Some(expr) = self.parse_expr()? {
            lambda.add_child(r_arrow);
            lambda.add_child(expr);

            Ok(Some(lambda))
        } else {
            Err("lambda body must be expression".to_string())
        }
    }

    fn parse_tuple_lit(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let l_paren = if let Some(l_prn) = self.parse_l_paren()? {
            l_prn
        } else {
            return Ok(None);
        };

        let mut tuple_lit = new_ast_node(TokenType::TupleLit, 9);
        tuple_lit.add_child(l_paren);

        self.consume_blanks()?;

        if let Some(first_expr) = self.parse_expr()? {
            tuple_lit.add_child(first_expr);

            if let Some(first_comma) = self.parse_comma()? {
                tuple_lit.add_child(first_comma);
            } else {
                return Err(
                    "expected comma after first tuple element".to_string()
                );
            }

            if let Some(second_expr) = self.parse_expr()? {
                tuple_lit.add_child(second_expr);
            } else {
                return Err(
                    "expected 0 or at least 2 elements in tuple".to_string()
                );
            }

            self.consume_blanks()?;

            while let Some(comma) = self.parse_comma()? {
                if let Some(expr) = self.parse_expr()? {
                    tuple_lit.add_child(comma);
                    tuple_lit.add_child(expr);

                    self.consume_blanks()?;
                } else {
                    break;
                }
            }
        }

        if let Some(r_paren) = self.parse_r_paren()? {
            tuple_lit.add_child(r_paren);

            Ok(Some(tuple_lit))
        } else {
            Err("expected right paren to terminate tuple".to_string())
        }
    }

    fn parse_list_lit(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let mut list_lit = new_ast_node(TokenType::ListLit, 12);

        if let Some(l_sq_bracket) = self.parse_l_sq_bracket()? {
            list_lit.add_child(l_sq_bracket);
        } else {
            return Ok(None);
        }

        if let Some(first_expr) = self.parse_expr()? {
            list_lit.add_child(first_expr);

            self.consume_blanks()?;

            while let Some(comma) = self.parse_comma()? {
                if let Some(expr) = self.parse_expr()? {
                    list_lit.add_child(comma);
                    list_lit.add_child(expr);

                    self.consume_blanks()?;
                } else {
                    break;
                }
            }
        }

        if let Some(r_sq_bracket) = self.parse_r_sq_bracket()? {
            list_lit.add_child(r_sq_bracket);

            Ok(Some(list_lit))
        } else {
            Err("left square bracket in list literal requires ]".to_string())
        }
    }

    fn parse_list_comp(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let l_sq_bracket =
            if let Some(l_sq_bckt) = self.parse_l_sq_bracket()? {
                l_sq_bckt
            } else {
                return Ok(None);
            };

        let expr = if let Some(xpr) = self.parse_expr()? {
            xpr
        } else {
            return Err(
                "expected expression on left-hand side of list comprehension"
                    .to_string()
            );
        };

        let bar_ = if let Some(br) = self.parse_bar()? {
            br
        } else {
            return Err("expected | for list comprehension".to_string());
        };

        let mut list_comp = new_ast_node(TokenType::ListComp, 12);
        list_comp.add_child(l_sq_bracket);
        list_comp.add_child(expr);
        list_comp.add_child(bar_);

        let mut gen_or_cond = true;
        if let Some(first_generator) = self.parse_generator()? {
            list_comp.add_child(first_generator);
        } else {
            if let Some(first_condition) = self.parse_expr()? {
                list_comp.add_child(first_condition);
            } else {
                gen_or_cond = false;
            }
        }

        if gen_or_cond {
            self.consume_blanks()?;

            while let Some(comma) = self.parse_comma()? {
                if let Some(generator) = self.parse_generator()? {
                    list_comp.add_child(comma);
                    list_comp.add_child(generator);
                } else if let Some(condition) = self.parse_expr()? {
                    list_comp.add_child(comma);
                    list_comp.add_child(condition);
                } else {
                    break;
                }

                self.consume_blanks()?;
            }
        }

        if let Some(r_sq_bracket) = self.parse_r_sq_bracket()? {
            list_comp.add_child(r_sq_bracket);

            Ok(Some(list_comp))
        } else {
            Err("expected ] to terminate list comprehension".to_string())
        }
    }

    fn parse_dict_lit(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let mut dict_lit = new_ast_node(TokenType::DictLit, 16);

        if let Some(l_curly_bracket) = self.parse_l_curly_bracket()? {
            dict_lit.add_child(l_curly_bracket);
        } else {
            return Ok(None);
        }

        if let Some(first_entry) = self.parse_dict_entry()? {
            self.consume_blanks()?;

            dict_lit.add_child(first_entry);

            while let Some(comma) = self.parse_comma()? {
                if let Some(entry) = self.parse_dict_entry()? {
                    dict_lit.add_child(comma);
                    dict_lit.add_child(entry);

                    self.consume_blanks()?;
                } else {
                    break;
                }
            }
        }

        if let Some(r_curly_bracket) = self.parse_r_curly_bracket()? {
            dict_lit.add_child(r_curly_bracket);

            Ok(Some(dict_lit))
        } else {
            Err("left curly bracket in dict literal requires }".to_string())
        }
    }

    fn parse_dict_comp(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let l_curly_bracket =
            if let Some(l_curly_bckt) = self.parse_l_curly_bracket()? {
                l_curly_bckt
            } else {
                return Ok(None);
            };

        let dict_entry = if let Some(dict_ent) = self.parse_dict_entry()? {
            dict_ent
        } else {
            return Err(
                "expected entry on left-hand side of dict comprehension"
                    .to_string()
            );
        };

        let bar_ = if let Some(br) = self.parse_bar()? {
            br
        } else {
            return Err("expected | for dict comprehension".to_string());
        };

        let mut dict_comp = new_ast_node(TokenType::DictComp, 12);
        dict_comp.add_child(l_curly_bracket);
        dict_comp.add_child(dict_entry);
        dict_comp.add_child(bar_);

        let mut gen_or_cond = true;
        if let Some(first_generator) = self.parse_generator()? {
            dict_comp.add_child(first_generator);
        } else if let Some(first_condition) = self.parse_expr()? {
            dict_comp.add_child(first_condition);
        } else {
            gen_or_cond = false;
        }

        if gen_or_cond {
            self.consume_blanks()?;

            while let Some(comma) = self.parse_comma()? {
                if let Some(generator) = self.parse_generator()? {
                    dict_comp.add_child(comma);
                    dict_comp.add_child(generator);
                } else if let Some(condition) = self.parse_expr()? {
                    dict_comp.add_child(comma);
                    dict_comp.add_child(condition);
                } else {
                    break;
                }

                self.consume_blanks()?;
            }
        }

        if let Some(r_curly_bracket) = self.parse_r_curly_bracket()? {
            dict_comp.add_child(r_curly_bracket);

            Ok(Some(dict_comp))
        } else {
            Err("expected } to terminate dict comprehension".to_string())
        }
    }

    fn parse_set_lit(&mut self) -> Result<Option<AST>, String> {
        self.consume_blanks()?;

        let mut set_lit = new_ast_node(TokenType::SetLit, 12);

        if let Some(l_curly_bracket) = self.parse_l_curly_bracket()? {
            set_lit.add_child(l_curly_bracket);
        } else {
            return Ok(None);
        }

        if let Some(first_expr) = self.parse_expr()? {
            self.consume_blanks()?;

            set_lit.add_child(first_expr);
